semangat ya mbuul belajarnya

--- a/halamanawal.html
+++ b/halamanawal.html
@@ -3,20 +3,33 @@
     <head>
         <meta charset="UTF-8"></meta>
         <title>Situs Resmi Pemerintah Kota Palembang</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="halamanawal.css">
     </head>
     <body>
         <header>
-            <nav class="fixed-top" style="position: fixed; top: 10rem; z-index: 100; background-color: unset;">
-                <img class="logo" src="https://palembang.go.id/asset/uploads/plg_emas.png" style="visibility: unset">
-                <ul class="nav-list">
-                    <li>Beranda</li>
-                    <li>Profil</li>
-                    <li>Pemerintah</li>
-                    <li>Informasi</li>
-                    <li>Sidemang</li>
-                </ul>
-            </nav>
+            <div class="header">
+                <!--nav class="fixed-top" style="position: fixed; margin-top: 10rem; z-index: 100; background-color: unset;"></nav-->
+                    <div class="header-logo" ><img src="https://palembang.go.id/asset/uploads/plg_emas.png" style="visibility: unset"></div>
+                    <ul class="header-list">
+                        <li><a>Beranda</a></li>
+                        <li><a>Profil</a></li>
+                        <li><a>Pemerintah</a></li>
+                        <li><a>Informasi</a></li>
+                        <li><a>Sidemang</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+        <main>
+            <div class="top-wrapper">
+                <div class="container">
+                  <h1>JEMBATAN AMPERA</h1>
+                  <p>Jembatan Ampera, yang telah menjadi lambang kota, terletak di tengah-tengah Kota Palembang, menghubungkan daerah</p>
+                  <div class="btn-wrapper">
+                    <a href="#" class="btn selengkapnya">SELENGKAPNYA</a>
+                  </div>
+                </div>
+              </div>          
+        </main>
     </body>
 </html>
